--- a/en/photography-watches.html
+++ b/en/photography-watches.html
@@ -280,7 +280,7 @@
         </div>
         <div class="footer__social-links">
           <a
-            href="https://www.instagram.com/itsdiogosaraiva/"
+            href="https://www.instagram.com/diogosaraiva__/"
             class="footer__social-link"
             target="_blank"
             >Instagram</a
@@ -292,7 +292,7 @@
             >LinkedIn</a
           >
           <a
-            href="https://www.youtube.com/channel/UCCXs_N8pYkHxLZ_uav-Arfg"
+            href="https://youtube.com/playlist?list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk"
             class="footer__social-link"
             target="_blank"
             >YouTube</a
