--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
       <div class="hero__social-links">
         <a
-          href="https://www.instagram.com/itsdiogosaraiva/"
+          href="https://www.instagram.com/diogosaraiva__/"
           class="hero__social-link"
         >
           <img src="assets/img/icon-instagram.svg" alt="Instagram" />
@@ -110,7 +110,7 @@
           <img src="assets/img/icon-linkedin.svg" alt="LinkedIn" />
         </a>
         <a
-          href="https://www.youtube.com/channel/UCCXs_N8pYkHxLZ_uav-Arfg"
+          href="https://youtube.com/playlist?list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk"
           class="hero__social-link"
         >
           <img src="assets/img/icon-youtube.svg" alt="YouTube" />
@@ -185,7 +185,7 @@
         </div>
         <div class="footer__social-links">
           <a
-            href="https://www.instagram.com/itsdiogosaraiva/"
+            href="https://www.instagram.com/diogosaraiva__/"
             class="footer__social-link"
             target="_blank"
             >Instagram</a
@@ -197,7 +197,7 @@
             >LinkedIn</a
           >
           <a
-            href="https://www.youtube.com/channel/UCCXs_N8pYkHxLZ_uav-Arfg"
+            href="https://youtube.com/playlist?list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk"
             class="footer__social-link"
             target="_blank"
             >YouTube</a
