--- a/en/work.html
+++ b/en/work.html
@@ -96,7 +96,7 @@
               class="work-photography__showcase-item"
             >
               <img
-                src="../assets/img/places/places-1.jpg"
+                src="../assets/img/places/places-8.jpg"
                 alt="Places Photography"
               />
               <a class="showcase-item__description">
@@ -231,7 +231,7 @@
           </h1>
         </div>
 
-        <div class="video-container">
+        <!-- <div class="video-container">
           <iframe
             width="560"
             height="315"
@@ -241,6 +241,18 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; showinfo; modestbranding; muted"
             allowfullscreen
           ></iframe>
+        </div> -->
+        <div class="video-showcase-wrapper">
+          <video
+            src="../assets/img/video-portfolio.mp4"
+            loop
+            muted
+            autoplay
+          ></video>
+
+          <a href="../en/filmmaking.html" class="video-showcase-description">
+            Visit Filmmaking Portfolio <i class="ri-arrow-right-line"></i
+          ></a>
         </div>
       </div>
     </section>
@@ -273,7 +285,7 @@
         </div>
         <div class="footer__social-links">
           <a
-            href="https://www.instagram.com/itsdiogosaraiva/"
+            href="https://www.instagram.com/diogosaraiva__/"
             class="footer__social-link"
             target="_blank"
             >Instagram</a
@@ -285,7 +297,7 @@
             >LinkedIn</a
           >
           <a
-            href="https://www.youtube.com/channel/UCCXs_N8pYkHxLZ_uav-Arfg"
+            href="https://youtube.com/playlist?list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk"
             class="footer__social-link"
             target="_blank"
             >YouTube</a
