Hero social links fixed

--- a/index.html
+++ b/index.html
@@ -100,18 +100,21 @@
         <a
           href="https://www.instagram.com/diogosaraiva__/"
           class="hero__social-link"
+          target="_blank"
         >
           <img src="assets/img/icon-instagram.svg" alt="Instagram" />
         </a>
         <a
           href="https://www.linkedin.com/in/diogo-saraiva-198b7098/"
           class="hero__social-link"
+          target="_blank"
         >
           <img src="assets/img/icon-linkedin.svg" alt="LinkedIn" />
         </a>
         <a
           href="https://youtube.com/playlist?list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk"
           class="hero__social-link"
+          target="_blank"
         >
           <img src="assets/img/icon-youtube.svg" alt="YouTube" />
         </a>
