--- a/en/contact.html
+++ b/en/contact.html
@@ -73,7 +73,10 @@
         </div>
         <div class="form-section-wrapper">
           <div class="form-section__left">
-            <form action="https://formsubmit.co/your@email.com" method="POST">
+            <form
+              action="https://formsubmit.co/diogo.saraiva94@gmail.com"
+              method="POST"
+            >
               <label for="name">Name <span>*</span></label>
               <input type="text" name="name" placeholder="John Doe" required />
               <label for="email">Email <span>*</span></label>
