--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
           <img src="assets/img/icon-youtube.svg" alt="YouTube" />
         </a>
       </div>
-      <div class="hero__change-language">
+      <!-- <div class="hero__change-language">
         <a href="index.html" class="language-active">EN</a>
         <i class="ri-checkbox-blank-circle-fill"></i>
         <a href="pt/sobre.html">PT</a>
-      </div>
+      </div> -->
     </section>
 
     <!---------- WORK ---------->
