--- a/en/filmmaking.html
+++ b/en/filmmaking.html
@@ -77,160 +77,152 @@
           </div>
 
           <div class="video-grid">
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/u9rTX0mlFTY"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+            <div class="filmmaking__thumbnail-container">
+              <a
+                href="https://www.youtube.com/watch?v=u9rTX0mlFTY&list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk&index=2"
+                target="_blank"
+              >
+                <img
+                  src="../assets/img/thumbnails/01-edp-corrida.jpg"
+                  alt="EDP Corrida"
+                />
+
+                <div class="img-description-hover">
+                  <h6>2022</h6>
+                  <h1>EDP Guia Prático de Corrida com Isabel Silva</h1>
+                </div>
+              </a>
             </div>
 
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/EMBubEdkMb4"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+            <div class="filmmaking__thumbnail-container">
+              <a
+                href="https://www.youtube.com/watch?v=EMBubEdkMb4&list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk&index=3"
+                target="_blank"
+              >
+                <img
+                  src="../assets/img/thumbnails/02-draft-media.jpg"
+                  alt="EDP Corrida"
+                />
+
+                <div class="img-description-hover">
+                  <h6>2022</h6>
+                  <h1>Video Apresentação Draft Media</h1>
+                </div>
+              </a>
             </div>
 
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/cdZGjUVDkBk"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+            <div class="filmmaking__thumbnail-container">
+              <a
+                href="https://www.youtube.com/watch?v=rAk-Bpev-NI&list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk&index=4"
+                target="_blank"
+              >
+                <img
+                  src="../assets/img/thumbnails/03-focus-fisio.jpg"
+                  alt="EDP Corrida"
+                />
+
+                <div class="img-description-hover">
+                  <h6>2022</h6>
+                  <h1>FocusFisio Osteopatia - Promo</h1>
+                </div>
+              </a>
+            </div>
+            <div class="filmmaking__thumbnail-container">
+              <a
+                href="https://www.youtube.com/watch?v=5QXkw3IdUaU&list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk&index=5"
+                target="_blank"
+              >
+                <img
+                  src="../assets/img/thumbnails/04-salamanca.jpg"
+                  alt="Salamanca Through My Eyes"
+                />
+
+                <div class="img-description-hover">
+                  <h6>2022</h6>
+                  <h1>Salamanca Through My Eyes</h1>
+                </div>
+              </a>
             </div>
 
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/L8ShvVhsHnE"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
+            <div class="filmmaking__thumbnail-container">
+              <a
+                href="https://www.youtube.com/watch?v=cdZGjUVDkBk&list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk&index=6"
+                target="_blank"
+              >
+                <img
+                  src="../assets/img/thumbnails/05-cru-kitchen.jpg"
+                  alt="Curso Cru Kitchen - Teaser"
+                />
 
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/gw_Q3-AQBtI"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+                <div class="img-description-hover">
+                  <h6>2022</h6>
+                  <h1>Curso Cru Kitchen - Teaser</h1>
+                </div>
+              </a>
             </div>
+            <div class="filmmaking__thumbnail-container">
+              <a
+                href="https://www.youtube.com/watch?v=L8ShvVhsHnE&list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk&index=7&t=690s"
+                target="_blank"
+              >
+                <img
+                  src="../assets/img/thumbnails/06-mafalda-almeida.jpg"
+                  alt="Mafalda Almeida Masterclass"
+                />
 
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/cIo-xPQVCOw"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+                <div class="img-description-hover">
+                  <h6>2022</h6>
+                  <h1>Mafalda Almeida Masterclass</h1>
+                </div>
+              </a>
             </div>
+            <div class="filmmaking__thumbnail-container">
+              <a
+                href="https://www.youtube.com/watch?v=gw_Q3-AQBtI&list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk&index=8"
+                target="_blank"
+              >
+                <img
+                  src="../assets/img/thumbnails/07-reparar-tempo.jpg"
+                  alt="Reparar o Tempo - Promo Video"
+                />
 
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/mpH5YS-1VIA"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+                <div class="img-description-hover">
+                  <h6>2022</h6>
+                  <h1>Reparar o Tempo - Promo Video</h1>
+                </div>
+              </a>
             </div>
+            <div class="filmmaking__thumbnail-container">
+              <a
+                href="https://www.youtube.com/watch?v=mpH5YS-1VIA&list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk&index=9"
+                target="_blank"
+              >
+                <img
+                  src="../assets/img/thumbnails/08-mercedes.jpg"
+                  alt="H&A - Mercedes-Benz SLK"
+                />
 
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/OBtBPtN2Igo"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+                <div class="img-description-hover">
+                  <h6>2022</h6>
+                  <h1>H&A - Mercedes-Benz SLK</h1>
+                </div>
+              </a>
             </div>
+            <div class="filmmaking__thumbnail-container">
+              <a
+                href="https://www.youtube.com/watch?v=OBtBPtN2Igo&list=PL71fWGQiDL2maYvDcnzOOVaKCzoQgZbNk&index=10"
+                target="_blank"
+              >
+                <img
+                  src="../assets/img/thumbnails/09-europa.jpg"
+                  alt="Teaser Podcast PontEuropa"
+                />
 
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/RehKS2zYS2w"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/_LnXJYRD6Y0"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/5QXkw3IdUaU"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/rAk-Bpev-NI"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-
-            <div class="filmmaking__video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/uCrWwkKs-6c"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+                <div class="img-description-hover">
+                  <h6>2022</h6>
+                  <h1>Teaser Podcast PontEuropa</h1>
+                </div>
+              </a>
             </div>
           </div>
         </div>
