--- a/en/work.html
+++ b/en/work.html
@@ -83,10 +83,11 @@
                 src="../assets/img/people/people-1.jpg"
                 alt="People Photography"
               />
-            </a>
-            <a class="showcase-item__description">
-              People
-              <i class="ri-arrow-right-line"></i>
+
+              <div class="showcase-item__description">
+                People
+                <i class="ri-arrow-right-line"></i>
+              </div>
             </a>
           </div>
 
@@ -96,13 +97,14 @@
               class="work-photography__showcase-item"
             >
               <img
-                src="../assets/img/places/places-8.jpg"
-                alt="Places Photography"
+                src="../assets/img/places/places-thumbnail.jpg"
+                alt="People Photography"
               />
-              <a class="showcase-item__description">
+
+              <div class="showcase-item__description">
                 Places
                 <i class="ri-arrow-right-line"></i>
-              </a>
+              </div>
             </a>
           </div>
 
@@ -112,13 +114,14 @@
               class="work-photography__showcase-item"
             >
               <img
-                src="../assets/img/watches/watches-1.jpg"
-                alt="Watches Photography"
+                src="../assets/img/watches/watches-thumbnail.jpg"
+                alt="watches Photography"
               />
-              <a class="showcase-item__description">
+
+              <div class="showcase-item__description">
                 Watches
                 <i class="ri-arrow-right-line"></i>
-              </a>
+              </div>
             </a>
           </div>
 
@@ -129,96 +132,16 @@
             >
               <img
                 src="../assets/img/fashion/fashion-1.jpg"
-                alt="Fashion Photography"
+                alt="fashion Photography"
               />
-              <a class="showcase-item__description">
+
+              <div class="showcase-item__description">
                 Fashion
                 <i class="ri-arrow-right-line"></i>
-              </a>
+              </div>
             </a>
           </div>
         </div>
-
-        <!-- <div
-          uk-slider="finite: true"
-          class="slider-wrapper uk-slider uk-slider-container"
-        >
-          <div class="uk-position-relative uk-light" tabindex="-1">
-            <ul
-              class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@"
-            >
-              <li>
-                <a href="../en/photography-places.html">
-                  <img
-                    src="../assets/img/places/places-15.jpg"
-                    alt="Places Category"
-                  />
-                </a>
-                <div class="slider-description">
-                  <a href="../en/photography-places.html"
-                    >Places <i class="ri-arrow-right-line"></i
-                  ></a>
-                </div>
-              </li>
-
-              <li>
-                <a href="../en/photography-watches.html">
-                  <img
-                    src="../assets/img/watches/watches-3.jpg"
-                    alt="Watches Category"
-                    style="max-width: 750px"
-                  />
-                </a>
-
-                <div class="slider-description">
-                  <a href="../en/photography-watches.html"
-                    >Watches <i class="ri-arrow-right-line"></i
-                  ></a>
-                </div>
-              </li>
-
-              <li>
-                <a href="../en/photography-fashion.html">
-                  <img
-                    src="../assets/img/fashion/fashion-9.jpg"
-                    alt="Fashion Category"
-                    style="position: absolute; bottom: -6rem"
-                  />
-                </a>
-
-                <div class="slider-description">
-                  <a href="../en/photography-fashion.html"
-                    >Fashion <i class="ri-arrow-right-line"></i
-                  ></a>
-                </div>
-              </li>
-
-              <li>
-                <a href="../en/photography-people.html">
-                  <img
-                    src="../assets/img/people/people-14.jpg"
-                    alt="People Category"
-                    style="position: absolute; bottom: -5rem"
-                  />
-                </a>
-
-                <div class="slider-description">
-                  <a href="../en/photography-people.html"
-                    >People <i class="ri-arrow-right-line"></i
-                  ></a>
-                </div>
-              </li>
-            </ul>
-
-            <div class="slider-arrow__left-container">
-              <a href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-            </div>
-
-            <div class="slider-arrow__right-container">
-              <a href="#" uk-slidenav-next uk-slider-item="next"></a>
-            </div>
-          </div>
-        </div> -->
       </div>
     </section>
 
